<?xml version="1.0"?>
<package format="3">
  <name>qtros2</name>
  <version>0.0.1</version>
  <description>
     Example app using QT Widgets and ROS2
  </description>
  <license>BSD-3-Clause</license>
  <maintainer email="abi@picknik.ai">Abishalini Sivaraman</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>control_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>qtbase5-dev</build_depend>
  <build_depend>qtdeclarative5-dev</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_components</build_depend>
  <build_depend>rviz_common</build_depend>
  <build_depend>rviz_default_plugins</build_depend>
  <build_depend>rviz_rendering</build_depend>
  <build_depend>rviz_visual_tools</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>tf2_eigen</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>gripper_controllers</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-gui</exec_depend>
  <exec_depend>libqt5-quick</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>
  <exec_depend>moveit_ros_visualization</exec_depend>
  <exec_depend>moveit_studio_utils_py</exec_depend>
  <exec_depend>picknik_studio_resources</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>
  <exec_depend>rviz_common</exec_depend>
  <exec_depend>rviz_default_plugins</exec_depend>
  <exec_depend>rviz_rendering</exec_depend>
  <exec_depend>ur5_e_moveit_config</exec_depend>
  <exec_depend>ur_controllers</exec_depend>
  <exec_depend>ur_description</exec_depend>
  <exec_depend>ur_robot_driver</exec_depend>
  <exec_depend>ur_ros2_control_demos</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
